--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ requests = "*"
 flask-authlib-client = "*"
 flask-login = "*"
 toml = "*"
+flask-cachecontrol = "*"
+colour = "*"
 
 [dev-packages]
 
